fix overflow for tag chips

--- a/app/math.css
+++ b/app/math.css
@@ -4,4 +4,5 @@
   @apply rounded-lg;
   @apply p-5;
   @apply text-lg;
+  @apply overflow-x-auto;
 }
